# docs/swagger.json
@@ -179,10 +179,8 @@
             "required": [
                 "channel",
                 "contact",
+                "device_reference",
                 "message_body",
-                "notification_type",
-                "notified_by",
-                "notify_on",
                 "subject",
                 "user_reference"
             ],
@@ -194,20 +192,11 @@
                     "type": "string"
                 },
                 "device_reference": {
-                    "type": "string"
-                },
-                "message_body": {
-                    "type": "string"
-                },
-                "notification_type": {
-                    "$ref": "#/definitions/shared.NotificationType"
-                },
-                "notified_by": {
                     "type": "string",
                     "maxLength": 38,
-                    "minLength": 26
+                    "minLength": 32
                 },
-                "notify_on": {
+                "message_body": {
                     "type": "string"
                 },
                 "subject": {
@@ -216,15 +205,7 @@
                 "user_reference": {
                     "type": "string",
                     "maxLength": 38,
-                    "minLength": 26
-                }
-            }
-        },
-        "helper.ErrorBody": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "description": "Code    string      `json:\"code\"`"
+                    "minLength": 32
                 }
             }
         },
@@ -243,7 +224,7 @@
                 "errors": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/helper.ErrorBody"
+                        "type": "string"
                     }
                 },
                 "timestamp": {
@@ -255,22 +236,13 @@
             "type": "integer",
             "enum": [
                 0,
-                1
+                1,
+                2
             ],
             "x-enum-varnames": [
                 "Sms",
-                "Email"
-            ]
-        },
-        "shared.NotificationType": {
-            "type": "integer",
-            "enum": [
-                0,
-                1
-            ],
-            "x-enum-varnames": [
-                "Instant",
-                "Scheduled"
+                "Email",
+                "Sms_Email"
             ]
         }
     }
